--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ server.port = 8085
 
 spring.application.name=classes
 spring.main.allow-bean-definition-overriding=true
+management.endpoints.web.exposure.include=hystrix.stream
 
 #eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 #eureka.instance.preferIpAddress=true
